# static-clang

./: .bazelrc  BUILD  MODULE.bazel  main.cc  non_module_deps.bzl
compiler-rt-20.1.1.src/lib/builtins/: BUILD.bazel  targets.bzl
lib/: BUILD.bazel
lib/libcxxabi/: BUILD.bazeleeee
lib/libunwind/: BUILD.bazel
libc.so/aarch64/: BUILD.bazel  libm.so.6  libresolv.so.2  librt.so.1  libutil.so.1
libc.so/x86_64/: BUILD.bazel  ld.so.2  libm.so.6  libresolv.so.2  librt.so.1  libutil.so.1
